--- a/PAM/Views/Shared/Signatures.cshtml
+++ b/PAM/Views/Shared/Signatures.cshtml
@@ -48,7 +48,15 @@
       <button id="saveDraft" class="btn btn-secondary">Save Draft</button>
     </div>
     <div class="col-8 text-right">
-      <a asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+      @switch (request.RequestTypeId)
+      {
+        case 4:
+          <a asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+          break;
+        case 12:
+          <a asp-controller="RemoveAccessRequest" asp-action="RemoveSystems" asp-route-id="@ViewData["id"]" class="btn btn-secondary">Previous</a>
+          break;
+      }
       <button id="next" type="submit" class="btn btn-primary ml-3">Next</button>
     </div>
   </div>
