Various fixes to make consistent with merge

--- a/PAM/Views/Review/EditReview.cshtml
+++ b/PAM/Views/Review/EditReview.cshtml
@@ -114,43 +114,45 @@
 
 <div class="card">
   <div class="card-header">Systems Requested</div>
-  @if (request.RequestTypeId == 4){ 
-  <div class="card-body">
-    <div class="row">
-      <div class="form-group col-md-6">
-        <label>Bureau</label>
-        <span class="form-control">@request.RequestedFor.Bureau.Description</span>
+  @if (request.RequestTypeId == 4)
+  {
+    <div class="card-body">
+      <div class="row">
+        <div class="form-group col-md-6">
+          <label>Bureau</label>
+          <span class="form-control">@request.RequestedFor.Bureau.Description</span>
+        </div>
+        <div class="form-group col-md-6">
+          <label>Unit / Job Function</label>
+          <span class="form-control">@request.RequestedFor.Unit.Name</span>
+        </div>
       </div>
-      <div class="form-group col-md-6">
-        <label>Unit / Job Function</label>
-        <span class="form-control">@request.RequestedFor.Unit.Name</span>
-      </div>
-    </div>
-    <div class="row">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Name</th>
-            <th scope="col" class="d-none d-md-table-cell">Description</th>
-            <th scope="col" class="nowrap">In Portfolio</th>
-          </tr>
-        </thead>
-        <tbody>
-          @foreach (var requestedSystem in request.Systems)
-          {
+      <div class="row">
+        <table class="table">
+          <thead>
             <tr>
-              <td>@requestedSystem.System.SystemId</td>
-              <td>@requestedSystem.System.Name</td>
-              <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
-              <td>@requestedSystem.InPortfolio</td>
+              <th scope="col">Id</th>
+              <th scope="col">Name</th>
+              <th scope="col" class="d-none d-md-table-cell">Description</th>
+              <th scope="col" class="nowrap">In Portfolio</th>
             </tr>
-          }
-        </tbody>
-      </table>
+          </thead>
+          <tbody>
+            @foreach (var requestedSystem in request.Systems)
+            {
+              <tr>
+                <td>@requestedSystem.System.SystemId</td>
+                <td>@requestedSystem.System.Name</td>
+                <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
+                <td>@requestedSystem.InPortfolio</td>
+              </tr>
+            }
+          </tbody>
+        </table>
+      </div>
     </div>
-    </div>
-    }
+  }
+
   @if (request.RequestTypeId == 11)
   {
     <div class="card-body">
@@ -223,6 +225,45 @@
     </div>
   }
 </div>
+
+@if (request.RequestTypeId == 12)
+{
+  <div class="card-body">
+    <div class="row">
+      <div class="form-group col-md-6">
+        <label>Bureau</label>
+        <span class="form-control">@request.RequestedFor.Bureau.Description</span>
+      </div>
+      <div class="form-group col-md-6">
+        <label>Unit / Job Function</label>
+        <span class="form-control">@request.RequestedFor.Unit.Name</span>
+      </div>
+    </div>
+    <div class="row">
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col" class="d-none d-md-table-cell">Description</th>
+            <th scope="col" class="nowrap">In Portfolio</th>
+          </tr>
+        </thead>
+        <tbody>
+          @foreach (var requestedSystem in request.Systems)
+          {
+            <tr>
+              <td>@requestedSystem.System.SystemId</td>
+              <td>@requestedSystem.System.Name</td>
+              <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
+              <td>@requestedSystem.InPortfolio</td>
+            </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+  </div>
+}
 
 <div class="card">
   <div class="card-header">Additional Information</div>
