--- a/PAM/Views/Review/ViewReview.cshtml
+++ b/PAM/Views/Review/ViewReview.cshtml
@@ -1,4 +1,4 @@
-﻿@model Review 
+﻿@model Review
 @{
   ViewData["Title"] = "Viewing";
   var request = (Request)ViewData["request"];
@@ -153,121 +153,6 @@
         </table>
       </div>
     </div>
-    <div class="card">
-      <div class="card-header">
-        Additional Information
-        <a class="float-right" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
-      </div>
-      <div class="card-body">
-        <div class="row mb-2">
-          <div class="col-md-4">
-            @if (Model.IsContractor)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            Contractor
-          </div>
-          <div class="col-md-4">
-            @if (Model.IsHighProfileAccess)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            High Profile
-          </div>
-          <div class="col-md-4">
-            @if (Model.IsGlobalAccess)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            Global Access
-          </div>
-        </div>
-        <div class="row">
-          <div class="form-group col-md-4">
-            <label>Caseload Type</label>
-            <span class="form-control">@Model.CaseloadType</span>
-          </div>
-          <div class="form-group col-md-4">
-            <label>Caseload Function</label>
-            <span class="form-control">@Model.CaseloadFunction</span>
-          </div>
-          <div class="form-group col-md-4">
-            <label>Caseload Number</label>
-            <span class="form-control">@Model.CaseloadNumber</span>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="card">
-      <div class="card-header">
-        Additional Information
-        <a class="float-right" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
-      </div>
-      <div class="card-body">
-        <div class="row mb-2">
-          <div class="col-md-4">
-            @if (Model.IsContractor)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            Contractor
-          </div>
-          <div class="col-md-4">
-            @if (Model.IsHighProfileAccess)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            High Profile
-          </div>
-          <div class="col-md-4">
-            @if (Model.IsGlobalAccess)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            Global Access
-          </div>
-        </div>
-        <div class="row">
-          <div class="form-group col-md-4">
-            <label>Caseload Type</label>
-            <span class="form-control">@Model.CaseloadType</span>
-          </div>
-          <div class="form-group col-md-4">
-            <label>Caseload Function</label>
-            <span class="form-control">@Model.CaseloadFunction</span>
-          </div>
-          <div class="form-group col-md-4">
-            <label>Caseload Number</label>
-            <span class="form-control">@Model.CaseloadNumber</span>
-          </div>
-        </div>
-      </div>
-    </div>
   }
   @if (request.RequestTypeId == 11)
   {
@@ -339,103 +224,64 @@
         </div>
       </div>
     </div>
+  }
+</div>
 
-    <div class="card">
-      <div class="card-header">
-        Additional Information
-        <a class="float-right" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]"><i class="fas fa-edit"></i></a>
+<div class="card">
+  <div class="card-header">
+    Additional Information
+  </div>
+  <div class="card-body">
+    <div class="row mb-2">
+      <div class="col-md-4">
+        @if (request.IsContractor)
+        {
+          <i class="far fa-check-square"></i>
+        }
+        else
+        {
+          <i class="far fa-square"></i>
+        }
+        Contractor
       </div>
-      <div class="card-body">
-        <div class="row mb-2">
-          <div class="col-md-4">
-            @if (Model.IsContractor)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            Contractor
-          </div>
-          <div class="col-md-4">
-            @if (Model.IsHighProfileAccess)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            High Profile
-          </div>
-          <div class="col-md-4">
-            @if (Model.IsGlobalAccess)
-            {
-              <i class="far fa-check-square"></i>
-            }
-            else
-            {
-              <i class="far fa-square"></i>
-            }
-            Global Access
-          </div>
-        </div>
-        <div class="row">
-          <div class="form-group col-md-4">
-            <label>Caseload Type</label>
-            <span class="form-control">@Model.CaseloadType</span>
-          </div>
-          <div class="form-group col-md-4">
-            <label>Caseload Function</label>
-            <span class="form-control">@Model.CaseloadFunction</span>
-          </div>
-          <div class="form-group col-md-4">
-            <label>Caseload Number</label>
-            <span class="form-control">@Model.CaseloadNumber</span>
-          </div>
-        </div>
+      <div class="col-md-4">
+        @if (request.IsHighProfileAccess)
+        {
+          <i class="far fa-check-square"></i>
+        }
+        else
+        {
+          <i class="far fa-square"></i>
+        }
+        High Profile
+      </div>
+      <div class="col-md-4">
+        @if (request.IsGlobalAccess)
+        {
+          <i class="far fa-check-square"></i>
+        }
+        else
+        {
+          <i class="far fa-square"></i>
+        }
+        Global Access
       </div>
     </div>
-  }
-  @if (Model.RequestTypeId == 12)
-  {
-    <div class="card-body">
-      <div class="row">
-        <div class="form-group col-md-6">
-          <label>Bureau</label>
-          <span class="form-control">@Model.RequestedFor.Bureau.Description</span>
-        </div>
-        <div class="form-group col-md-6">
-          <label>Unit / Job Function</label>
-          <span class="form-control">@Model.RequestedFor.Unit.Name</span>
-        </div>
+    <div class="row">
+      <div class="form-group col-md-4">
+        <label>Caseload Type</label>
+        <span class="form-control">@request.CaseloadType</span>
       </div>
-      <div class="row">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Id</th>
-              <th scope="col">Name</th>
-              <th scope="col" class="d-none d-md-table-cell">Description</th>
-              <th scope="col" class="nowrap">Access Type</th>
-            </tr>
-          </thead>
-          <tbody>
-            @foreach (var requestedSystem in Model.Systems)
-            {
-              <tr>
-                <td>@requestedSystem.System.SystemId</td>
-                <td>@requestedSystem.System.Name</td>
-                <td class="d-none d-md-table-cell">@requestedSystem.System.Description</td>
-                <td>@requestedSystem.AccessType</td>
-              </tr>
-            }
-          </tbody>
-        </table>
+      <div class="form-group col-md-4">
+        <label>Caseload Function</label>
+        <span class="form-control">@request.CaseloadFunction</span>
+      </div>
+      <div class="form-group col-md-4">
+        <label>Caseload Number</label>
+        <span class="form-control">@request.CaseloadNumber</span>
       </div>
     </div>
-  }
+  </div>
 </div>
 
 <div class="row mt-3">
