--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
             <a class="dropdown-item" asp-controller="Bureau" asp-action="Bureaus">Bureaus</a>
             <a class="dropdown-item" asp-controller="Unit" asp-action="Units">Units</a>
             <a class="dropdown-item" asp-controller="System" asp-action="Systems">Systems</a>
+            <a class="dropdown-item" asp-controller="ProcessingUnit" asp-action="ProcessingUnits">Processing Units</a>
           </div>
         </li>
         <li class="nav-item">
