--- a/PAM/Views/System/EditSystem.cshtml
+++ b/PAM/Views/System/EditSystem.cshtml
@@ -22,19 +22,25 @@
 
 <form method="post">
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-4">
       <label asp-for="Name">Name</label>
       <input asp-for="Name" type="text" class="form-control" required>
     </div>
+    <div class="form-group col-md-8">
+      <label asp-for="Description">Description</label>
+      <input asp-for="Description" type="text" class="form-control">
+    </div>
+  </div>
+  <div class="form-row">
     <div class="form-group col-md-6">
       <label asp-for="Owner">Owner</label>
       <input asp-for="Owner" type="text" class="form-control">
     </div>
-  </div>
-  <div class="form-row">
-    <div class="form-group col-12">
-      <label asp-for="Description">Description</label>
-      <input asp-for="Description" type="text" class="form-control">
+    <div class="form-group col-md-6">
+      <label asp-for="ProcessingUnitId" class="form-label">Processing Unit</label>
+      <select asp-for="ProcessingUnitId" class="form-control" asp-items="ViewBag.processingUnits">
+        <option value="">- NONE -</option>
+      </select>
     </div>
   </div>
   <div class="form-row">
