--- a/PAM/Views/System/Systems.cshtml
+++ b/PAM/Views/System/Systems.cshtml
@@ -8,6 +8,11 @@
 @section Scripts{
   <script src="~/lib/core-js/core.min.js"></script>
   <script src="~/lib/bootstrap-table/bootstrap-table.min.js"></script>
+  <script>
+    $(function () {
+      $(".main-content").parents(".container").removeClass("container").addClass("container-fluid");
+    });
+  </script>
 }
 
 <nav aria-label="breadcrumb">
@@ -24,6 +29,7 @@
       <th>Name</th>
       <th class="d-none d-lg-table-cell">Description</th>
       <th class="d-none d-md-table-cell">Owner</th>
+      <th class="d-none d-md-table-cell">Processing Unit</th>
       <th></th>
     </tr>
   </thead>
@@ -36,6 +42,7 @@
         </td>
         <td class="d-none d-lg-table-cell">@system.Description</td>
         <td class="d-none d-md-table-cell">@system.Owner</td>
+        <td class="d-none d-md-table-cell">@system.ProcessingUnit?.Name</td>
         <td>
           <a asp-action="EditSystem" asp-route-id="@system.SystemId" class="btn btn-primary">
             <i class="fas fa-edit"></i>
