--- a/PAM/Views/RemoveAccessRequest/RemoveSystems.cshtml
+++ b/PAM/Views/RemoveAccessRequest/RemoveSystems.cshtml
@@ -46,8 +46,8 @@
     <div class="row">
       <div class="col-md-9">
         <p class="float-left mt-2">Please select system(s) you currently have access to, to remove:</p>
-        <table id="table"
-               data-toggle="table"
+        @* For some odd reason, the script to enable/disable only works when table tag below isnt closed *@
+        <table id="table" data-toggle="table"
           <thead>
             <tr>
               <th></th>
