--- a/PAM/Views/RemoveAccessRequest/RemoveSystems.cshtml
+++ b/PAM/Views/RemoveAccessRequest/RemoveSystems.cshtml
@@ -6,7 +6,7 @@
 }
 @section StyleSheets{
   <link rel="stylesheet" href="~/css/progressbar.css" />
-  <link rel="stylesheet" href="~/lib/bootstrap-table/bootstrap-table.min.css">
+  <link rel="stylesheet" href="~/lib/bootstrap-table/bootstrap-table.min.css" />
 }
 
 @section Scripts {
